[project]
name = "comfyui_civitai_prompt_stats"
description = "A ComfyUI node that quickly fetches the most commonly used positive and negative prompts for Civitai models (Checkpoint / Lora) from the community, helping you effortlessly enhance your own creations!(ComfyUI 节点，让你快速获取 Civitai 模型（Checkpoint / Lora）在社区中最常用的正向与负向 Prompt，轻松优化和提升自己的创作！)"
version = "0.0.2"
license = "MIT"

[project.urls]
Repository = "https://github.com/BAIKEMARK/ComfyUI_Civitai_Prompt_Stats"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "BAIKEMARK"
DisplayName = "ComfyUI_Civitai_Prompt_Stats"
Icon = ""
